kubernetes-network/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework3
  namespace: homework
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: nginx
